model_runs/DRAM_test_new_filter/nohup.out
  File "DRAMtest.py", line 123
    "
    ^
SyntaxError: EOL while scanning string literal
